# src/admin/dto/update-user-role-response.dto.ts
@@ -1,0 +1,13 @@
+import { ApiProperty } from '@nestjs/swagger';
+import { Role } from '@prisma/client';
+
+export class UpdateUserRoleResponseDto {
+  @ApiProperty()
+  id: string;
+
+  @ApiProperty()
+  username: string;
+
+  @ApiProperty({ enum: Role })
+  role: Role;
+}
